tests/syntactic/syntax4/syntax4.err
Error: syntax error, unexpected /, expecting ( or . in file syntax4.dl at line 24
blah /
-----^-
1 errors generated, evaluation aborted
